--- a/task-01/src/css/styles.css
+++ b/task-01/src/css/styles.css
@@ -88,7 +88,7 @@ h3 {
   color: #A3C644;
 }
 
-.modal-adress {
+.modal-address {
   display: inlibe-block;  
   color: #464547;
   font-family: 'Source Sans Pro Regular',Arial,sans-serif;
